--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,9 @@
             "remotePath": "",
             "port": 2345,
             "host": "127.0.0.1",
-            "program": "${fileDirname}",
-            "console": "externalTerminal",
+            "program": "${workspaceRoot}",
             "env": { },
-            "args": ["-j", "test.ldg", "-a", "Liabilities:CC", "-csv", "csv\\test.csv", "-s", "1", "-ic", "0,1,3,5,6,8,9,10", "-d", "1/2/2006", "-debug"],
+            "args": ["-j", "test.ldg", "-a", "L:CC", "-csv", "test.csv", "-tfidf", "-debug"],
             "showLog": false
         }
     ]
